# shion-AI

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 41d3ed46785d_updated_sa_datetime_timezone_true.py  45bb8409dc55_creating_initial_tables.py
scripts/: entrypoint.sh
src/app/: app.py
src/app/api/: assistants.py  auth.py  conversations.py
src/app/core/: config.py  dependencies.py  exceptions.py  exceptions_handlers.py  logger.py  middleware.py  rate_limit.py  redis.py  security.py
src/app/db/: session.py
src/app/models/: __init__.py  assistant.py  conversation.py  user.py
src/app/schemas/: assistant_schema.py  conversation_schema.py  message_schema.py  user_schema.py
src/app/services/: assistant_service.py  auth_service.py  conversation_service.py  llm_service.py
src/app/tests/: conftest.py  test_assistants.py  test_auth.py  test_conversations.py
