[project]
name = "Shion-AI"
version = "0.1.0"
description = "Shion AI assistant platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "celery[redis]>=5.6.3",
    "fastapi>=0.138.1",
    "flower>=2.0.1",
    "httpx>=0.28.1",
    "locust>=2.44.4",
    "openai>=2.44.0",
    "passlib[bcrypt]>=1.7.4",
    "prometheus-fastapi-instrumentator>=8.0.2",
    "psycopg2-binary>=2.9.12",
    "psycopg[binary]>=3.3.4",
    "pwdlib[argon2]>=0.3.0",
    "pydantic[email]>=2.13.4",
    "pydantic-settings>=2.14.2",
    "redis>=6.4.0",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "requests>=2.34.2",
    "slowapi>=0.1.10",
    "structlog>=26.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.3.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
app = ["py.typed"]
